# common

./: .gitignore  README.md  conftest.py  pyproject.toml
src/yumoyi_common/: __init__.py  column_inference.py  db_backup.py  django_db_backup.py
src/yumoyi_common/management/commands/: dbbackup.py  dbrestore.py
tests/: test_column_inference.py  test_db_backup.py  test_django_db_backup.py
tests/testdata/: column_inference_zh.json  column_inference_zh.py
