[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "yumoyi-common"
version = "0.2.0"
description = "Shared utilities for yumoyi projects"
requires-python = ">=3.9"
dependencies = ["openpyxl>=3.1"]

[project.optional-dependencies]
django = ["Django>=4.1"]
dev = ["pytest", "coverage"]

[tool.setuptools.packages.find]
where = ["src"]
