[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "yumoyi-common"
version = "0.4.0"
description = "Shared utilities for yumoyi projects"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [{name = "a21256"}]
dependencies = ["openpyxl>=3.1"]

[project.optional-dependencies]
django = ["Django>=4.1"]
dev = ["pytest>=7.0", "coverage>=7.0"]

[project.urls]
Repository = "https://github.com/a21256/common"

[tool.setuptools.packages.find]
where = ["src"]
